<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gbsgarn</string>
    <string name="app_id">424240934363823</string>
    <string name="fb_token">424240934363823|IzmKFSTX-mq0KBkJBIn3Z1X9ltk</string>
    <string name="name">G-B:s Garn</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome!</string>
    <string name="open">Open!</string>
    <string name="closed">Closed.</string>
    <string name="today">Today:</string>
    <string name="tomorrow">Tomorrow:</string>
    <string name="photo">Photo</string>
    <string name="hours">10.00&#8211;18.00</string>
    <string name="testTime">2013&#8211;06&#8211;10T14:32:41+01:00</string>
    <string name="title_activity_test_tab">TestTabActivity</string>
    <string name="title_notes">Notes</string>
    <string name="title_feed">Feed</string>
    <string name="title_activity_notes">Notes</string>

</resources>
